Fix image layout issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -749,7 +749,7 @@ body::before {
   flex-direction: column;
   align-items: center;
   max-width: 50%;
-  margin: 0 auto;
+  // margin: 0 auto;
   padding-bottom: 2px;
   overflow: hidden;
   gap: var(--vertical-padding);
